@@ -227,10 +227,10 @@ public class SolrCoreTest extends SolrTestCaseJ4 {
     Map<String, SolrInfoMBean> infoRegistry = core.getInfoRegistry();
     assertTrue("infoRegistry Size: " + infoRegistry.size() + " is not greater than: " + 0, infoRegistry.size() > 0);
     //try out some that we know are in the config
-    SolrInfoMBean bean = infoRegistry.get(SpellCheckComponent.class.getName());
+    SolrInfoMBean bean = infoRegistry.get(SpellCheckComponent.COMPONENT_NAME);
     assertNotNull("bean not registered", bean);
     //try a default one
-    bean = infoRegistry.get(QueryComponent.class.getName());
+    bean = infoRegistry.get(QueryComponent.COMPONENT_NAME);
     assertNotNull("bean not registered", bean);
     //try a Req Handler, which are stored by name, not clas
     bean = infoRegistry.get("standard");
